--- a/static/css/site.css
+++ b/static/css/site.css
@@ -1373,7 +1373,4 @@ body.has-legal-disclaimer .scroll-to-top {
   .button {
     width: 100%;
   }
-  .scroll-to-top {
-    right: 0vmin;
-  }
 }
